# gpt-optimizer

./: .env.example  .gitignore  README.md  SKILL.md  agent.yaml  foundry_setup.py  pyproject.toml  requirements.txt  web_app.py
evals/: evals.json  trigger_eval.json
frontend/: index.html
gpt_optimizer/: __init__.py  __main__.py  agents.py  config.py  models.py  optimizer.py
scripts/: optimize.sh
tests/: golden_examples.json  test_golden.py  test_live.py  test_models.py  test_optimizer.py
